hphp/test/zend/good/ext-posix/posix_isatty.php
<?php

var_dump(posix_isatty(0));

?>