hphp/test/zend/bad/ext/xmlwriter/tests/xmlwriter_open_uri_error_001.php
<?php 
var_dump(xmlwriter_open_uri(''));
?>